overflow fix

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -204,7 +204,7 @@ header {
   position: relative;
   width: 100%;
   min-height: auto;
-  overflow-y: hidden;
+  overflow-y: scroll;
   // height: 100%;
   // background-position: center;
   // background-repeat: no-repeat;
@@ -701,7 +701,7 @@ label {
 header.masthead {
   text-align: left;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
   padding-top: calc(0.88*5rem + 55px);
   padding-bottom: 0.88*7rem;
   background: url('../img/assets/ah-2.jpg');
